js 태그 div 태그로 변경

--- a/CustomizedHouse/src/main/resources/templates/rea/reaMain.html
+++ b/CustomizedHouse/src/main/resources/templates/rea/reaMain.html
@@ -78,7 +78,7 @@
 											<b th:text="${reaIntroBoard.introTitle}"></b>
 										</div>
 										<div style="margin-top: 8px;">
-											<span th:text="${reaIntroBoard.introContent}"></span>
+											<textarea th:text="${reaIntroBoard.introContent}"></textarea>
 										</div>
 									</div>
 								</div>
@@ -106,7 +106,6 @@
 											</div>
 											<div class="card-body">
 												<div class="table-responsive">
-												
 												<div id="review_table">
 													<form id="review_form" name="review_form" method="post">
 														<table class="table table-bordered" id="reviewTable"
@@ -156,3 +155,20 @@
 		</div>
 	</div>
 </section>
+<div layout:fragment="pageJs">
+	<!-- include summernote css/js -->
+	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote.min.js"></script>
+	<script>
+	$(function(){
+		$('#summernote').summernote({
+			placeholder: '소개글을 작성해주세요.',
+	        tabsize: 2,
+	        height: 400,
+			fontNames : [ '맑은고딕', 'Arial', 'Arial Black', 'Comic Sans MS', 'Courier New', ],
+			fontNamesIgnoreCheck : [ '맑은고딕' ],
+			focus: true
+		});
+	})
+	</script>
+</div>
