--- a/CustomizedHouse/src/main/resources/templates/sign/signUpREAInfo.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpREAInfo.html
@@ -150,7 +150,7 @@
 	</form>
 
 </section>
-<js layout:fragment="pageJs">
+<div layout:fragment="pageJs">
 	<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0d0c0a21e3bf46994d7f7a41d9cc729f&libraries=services"></script>
 	<script>
@@ -303,4 +303,4 @@
 			}
 		});
 	</script>
-</js>
+</div>
