--- a/CustomizedHouse/src/main/resources/templates/sign/signUpREATerms.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpREATerms.html
@@ -291,7 +291,7 @@
 	</div>
 	<!--End off container -->
 </section>
-<js layout:fragment="pageJs">
+<div layout:fragment="pageJs">
 	<script>
 		function checkAll() {
 			if ($("#allCheck").is(':checked')) {
@@ -318,4 +318,4 @@
 			});
 		});
 	</script>
-</js>
+</div>
