--- a/CustomizedHouse/src/main/resources/templates/rea/reaIntroPage.html
+++ b/CustomizedHouse/src/main/resources/templates/rea/reaIntroPage.html
@@ -46,7 +46,7 @@
 		</form>
 	</div>
 </section>
-<js layout:fragment="pageJs">
+<div layout:fragment="pageJs">
 	<!-- include summernote css/js -->
 	<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote.min.js"></script>
@@ -62,4 +62,4 @@
 		});
 	})
 	</script>
-</js>
+</div>
