[#7] 회원가입 기능 완료

--- a/CustomizedHouse/src/main/resources/templates/sign/signUpGenericInfo.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpGenericInfo.html
@@ -98,21 +98,21 @@
 							<div class="form-group">
 								<label>주소 &nbsp;&nbsp;&nbsp;&nbsp;<span id="tdCh"></span></label>
 								<div class="row">&nbsp;&nbsp;&nbsp;&nbsp;
-									<input type="text" class="form-control" name="userAddr" id="userAddr"
+									<input type="text" class="form-control" name="userAddress" id="userAddress"
 										   required="required" placeholder="주소" style="width:72%;"> &nbsp;&nbsp;
 									<input type="button" onclick="searchAddr()" value="주소 검색"><br><br>
 								</div>
-								<input type="text" class="form-control" name="userDetailAddr" id="userDetailAddr"
+								<input type="text" class="form-control" name="userDetailAddress" id="userDetailAddress"
 									   required="required" placeholder="상세주소" style="width:77%;"><br>
 								<input type="hidden" id="userCode" name="userCode" value="U01">
 								<div id="map"
 									 style="width: 300px; height: 300px; margin-top: 10px; margin-left:17%;display: none"></div>
-							</div><br>
-
+							</div>
+							<br>
 							<div class="form-group">
 								<div class="row">
 									<div class="col-sm-6">
-										<button id="signUp" type="button"
+										<button id="signUp" type="submit"
 												class="btn btn-primary btn-block btn-lg" >Sign Up</button>
 									</div>
 									<div class="col-sm-6">
@@ -122,14 +122,14 @@
 										</div>
 									</div>
 								</div>
-							<br>
-							<br>
+								<br>
+								<br>
 								<div class="text-center">
 									이미 회원이신가요? <a href="../LoginPageService.d4b">Click here</a>
 								</div>
-							<br>
-							<br>
-							<br>
+								<br>
+								<br>
+								<br>
 							</div>
 						</div>
 					</div>
@@ -144,18 +144,6 @@
 	<script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0d0c0a21e3bf46994d7f7a41d9cc729f&libraries=services"></script>
 	<script>
-		$("#signUp").click(function () {
-			$.ajax({
-				url : '/sign/signUpGenericUser',
-				type : 'post',
-				success : function(data) {
-					console.log(data);
-				}, error : function() {
-					console.log("실패");
-				}
-			});
-		});
-
 		$(function() {
 	// // 아이디 유효성 검사(1 = 중복 / 0 != 중복)
 	// 		$("#userId").blur(function() {
