[#7] 회원가입 시 비밀번호 암호화

--- a/CustomizedHouse/src/main/resources/templates/sign/signUpGenericInfo.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpGenericInfo.html
@@ -117,8 +117,8 @@
 									</div>
 									<div class="col-sm-6">
 										<div class="col-sm-6">
-										<button type="reset"
-												class="btn btn-primary btn-block btn-lg" onclick="location.href='../getMain.d4b'">Cancel</button>
+										<button type="button"
+												class="btn btn-primary btn-block btn-lg" onclick="location.href='/'">Cancel</button>
 										</div>
 									</div>
 								</div>
