--- a/CustomizedHouse/src/main/resources/templates/sign/signUpSuccess.html
+++ b/CustomizedHouse/src/main/resources/templates/sign/signUpSuccess.html
@@ -35,10 +35,10 @@
                         <div class="form-group">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <button type="submit" class="btn btn-primary btn-block btn-lg" onclick="location.href='LoginPageService.d4b'">Log in</button>
+                                    <button type="button" class="btn btn-primary btn-block btn-lg" onclick="location.href='/sign/loginPage'">Log in</button>
                                 </div>
                                 <div class="col-sm-6">
-                                    <button type="submit" class="btn btn-primary btn-block btn-lg" onclick="location.href='Main.jsp'">Main</button>
+                                    <button type="button" class="btn btn-primary btn-block btn-lg" onclick="location.href='/'">Main</button>
                                 </div>
                             </div>
                         </div>
