--- a/CustomizedHouse/bin/main/templates/fragments/header.html
+++ b/CustomizedHouse/bin/main/templates/fragments/header.html
@@ -27,12 +27,12 @@
         <div class="attr-nav">
             <ul>
                 <li class="login">
-                    <a sec:authorize="isAnonymous()" th:href="@{sign/loginPage}">로그인</a>
+                    <a sec:authorize="isAnonymous()" th:href="@{/sign/loginPage}">로그인</a>
                     <a sec:authorize="isAuthenticated()" th:href="@{/sign/logout}">로그아웃</a>
                 </li>
-                <li class="join"><a sec:authorize="isAnonymous()" th:href="@{sign/signUpPage}">회원가입</a></li>
+                <li class="join"><a sec:authorize="isAnonymous()" th:href="@{/sign/signUpPage}">회원가입</a></li>
                 <li class="join"><a sec:authorize="hasRole('ROLE_REAUSER')" th:href="@{/rea/reaMain}">공인중개사 회원</a></li>
-                <li class="join"><a sec:authorize="hasRole('ROLE_GENUSER')" th:href="@{/gen/myPage}">내정보</a></li>
+                <li class="join"><a sec:authorize="hasRole('ROLE_GENUSER')" th:href="@{/generic/myPage}">내정보</a></li>
                 <li class="side-menu">
                     <a sec:authorize="hasRole('ROLE_ADMIN')"><i class='fa fa-bars'></i></a>
                 </li>
