--- a/CustomizedHouse/src/main/resources/templates/sale/saleListPage.html
+++ b/CustomizedHouse/src/main/resources/templates/sale/saleListPage.html
@@ -2,92 +2,6 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="~{indexLayout}">
 <head>
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=c25e5251a65ff1c89ea18b02aa87d788"></script>
-
-
-<script type="text/javascript">
-$(function () {
-    $('.slick-items').slick({
-        autoplay : true,
-        dots : true,
-        speed : 300 /* 이미지가 슬라이딩시 걸리는 시간 */,
-        infinite : true,
-        autoplaySpeed : 3000 /* 이미지가 다른 이미지로 넘어 갈때의 텀 */,
-        arrows : true,
-        slidesToShow : 1,
-        slidesToScroll : 1,
-        fade : false
-     });
-    
-  //아파트 이름 마커에 넣기 위해 배열 생성
-      /*
-    	var aptNameValue = $("input[name='aptName']").length;
-    	var aptNameArr = new Array(aptNameValue);
-    	for(var i=0; i< aptNameArr.length; i++){                          
-    		aptNameArr[i] = "<div><span>"+$("input[name='aptName']")[i].value.split(",")[1]+"</span></div>";
-        }
-	*/
-	var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-    mapOption = { 
-        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
-        level: 3 // 지도의 확대 레벨
-    };
-
-	var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
-	
-	// 마커가 표시될 위치입니다 
-	var markerPosition  = new kakao.maps.LatLng(33.450701, 126.570667); 
-	
-	// 마커를 생성합니다
-	var marker = new kakao.maps.Marker({
-	    position: markerPosition
-	});
-	
-	// 마커가 지도 위에 표시되도록 설정합니다
-	marker.setMap(map);
-	
-	//아파트 주소를 배열로 생성
-    /* var arrValue = $("input[name='addr']").length;
-    var array = new Array(arrValue);
-    for(var i=0; i< array.length; i++){                          
-    	array[i] = $("input[name='addr']")[i].value.split(",");
-    }
-
-    var mapContainer = document.getElementById('map'), // 지도를 표시할 div  
-	mapOption = {
-   	center: new kakao.maps.LatLng(37.497571, 127.049994), // 지도의 중심좌표
-   	level: 6 // 지도의 확대 레벨  
-	};
-
-	var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성
-	//주소-좌표 변환 객체를 생성
-	var geocoder = new kakao.maps.services.Geocoder();
-	
-	for (var i = 0; i < array.length; i++){
-		geocoder.addressSearch(array[i], function(result, status) {
-	        // 정상적으로 검색이 완료됐으면 
-	         if (status === kakao.maps.services.Status.OK) {
-	            var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
-	            // 결과값으로 받은 위치를 마커로 표시
-	            var marker = new kakao.maps.Marker({
-	                map: map,
-	                position: coords,
-	            });
-	           marker.setMap(map);
-	           map.setCenter(coords);
-	        } 
-	    }); 
-	} */
-		    	
-		    	$('.trigger').click(function(){
-		       	 $('.modal-wrapper').toggleClass('open');
-		            $('.page-wrapper').toggleClass('blur-it');
-		             return false;
-		        });
-		        $('[data-toggle="tooltip"]').tooltip(); 
-		        
-		        });
-</script>
 <style type="text/css">
 h5{
 font-family: 'Jua', sans-serif;
@@ -286,8 +200,10 @@ table {
 							<br>
 						</div>
 					</div>
+
 					<!--Topic 자리 -->
 					<br>
+					
 					<div class="row">
 						<div class="col-md-12">
 <h6>300개 이상의 매물</h6>
@@ -335,8 +251,8 @@ table {
 		    <hr>
 
     <!-- map -->
-    <div class="col-lg-5">
-        <div id="map" style="width: 100%; height: 100%;"></div>
+    <div class="col-lg-5">   
+        <div id="mapList" style="width: 100%; height: 100%;"></div>
     </div>
 	</div>
 		<!-- Modal -->
@@ -388,7 +304,43 @@ table {
 		</div>
 	</div> -->
 						</div>
-					</div>
-    
+						</div>
 
 </section>
+<div layout:fragment="pageJs">
+<script type="text/javascript" src="http://dapi.kakao.com/v2/maps/sdk.js?appkey=7f29636abb75060606ee8e36cbc1601e&libraries=LIBRARY"></script>    
+<script>
+$(function() {
+    $('.slick-items').slick({
+        autoplay : true,
+        dots : true,
+        speed : 300 /* 이미지가 슬라이딩시 걸리는 시간 */,
+        infinite : true,
+        autoplaySpeed : 3000 /* 이미지가 다른 이미지로 넘어 갈때의 텀 */,
+        arrows : true,
+        slidesToShow : 1,
+        slidesToScroll : 1,
+        fade : false
+     });
+    
+	var mapContainer = document.getElementById('mapList'), // 지도를 표시할 div 
+	    mapOption = { 
+	        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+	        level: 3 // 지도의 확대 레벨
+	    };
+
+		var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+		
+		// 마커가 표시될 위치입니다 
+		var markerPosition  = new kakao.maps.LatLng(33.450701, 126.570667); 
+		
+		// 마커를 생성합니다
+		var marker = new kakao.maps.Marker({
+		    position: markerPosition
+		});
+		
+		// 마커가 지도 위에 표시되도록 설정합니다
+		marker.setMap(map);
+			});
+</script>			
+</div>
