--- a/CustomizedHouse/src/main/resources/templates/rea/reaIntroPage.html
+++ b/CustomizedHouse/src/main/resources/templates/rea/reaIntroPage.html
@@ -32,18 +32,16 @@
 </head>
 <section id="join" class="about roomy-100" layout:fragment="content">
 	<div class="container">
-		<form th:action="@{/rea/introPageWrite}" th:object="${reaIntroBoard}" method="post" action="#">
-			<br style="clear: both">
-			<h3 style="margin-bottom: 25px;">공인중개사 소개글</h3>
-			<div class="form-group">
-				<input type="text" class="form-control" id="introTitle" name="introTitle" placeholder="제목을 입력해주세요" required
-				style="width:100%;">
-			</div>
-			<div class="form-group">
-				<textarea class="form-control" id="summernote" name="introContent" maxlength="140" rows="7"></textarea>
-			</div>
-			<button type="button" id="submitBtn" class="btn btn-primary pull-right">작성 완료</button>
-		</form>
+		<br style="clear: both">
+		<h3 style="margin-bottom: 25px;">공인중개사 소개글</h3>
+		<div class="form-group">
+			<input type="text" class="form-control" id="introTitle" name="introTitle" placeholder="제목을 입력해주세요" required
+			style="width:100%;">
+		</div>
+		<div class="form-group">
+			<textarea class="form-control" id="summernote" name="introContent" maxlength="140" rows="7"></textarea>
+		</div>
+		<button type="button" id="submitBtn" class="btn btn-primary pull-right">작성 완료</button>
 	</div>
 </section>
 <div layout:fragment="pageJs">
@@ -53,18 +51,6 @@
 	<script>
 	$(function(){
 		
-		
-		
-		$("#submitBtn").click(function(){
-			let content = $("#summernote").val();
-			let str = content.replace('<p>', '');
-			
-			console.log('컨텐츠!!'+content);
-			console.log('replace : '+str);
-			
-			let str2 = str.replace('</p>','');
-			console.log('바뀜?'+str2);
-		})
 		$('#summernote').summernote({
 			height: 350,
 			placeholder: "글을 입력하세요.",
@@ -80,27 +66,39 @@
 				  ['view', ['fullscreen', 'codeview', 'help']],
 				],
 			spellCheck: true,  /*맞춤법 검사 */
-			codemirror: { // codemirror options
-				    theme: 'monokai',
-				    htmlMode: true
-				  },
-			 callbacks: {
-				 onChange: function(contents) {
-				      console.log('onChange:', contents);
-				      
-				    }
-				  },    	       	
+			
 		    });
-	
 		
-		/* $('#summernote').summernote({
-			placeholder: '소개글을 작성해주세요.',
-	        tabsize: 2,
-	        height: 400,
-			fontNames : [ '맑은고딕', 'Arial', 'Arial Black', 'Comic Sans MS', 'Courier New', ],
-			fontNamesIgnoreCheck : [ '맑은고딕' ],
-			focus: true
-		}); */
+		$("#submitBtn").click(function(){
+			//공백 처리
+			if($("#introTitle").val() == '') {
+				alert('제목을 입력해주세요.')
+				$("#introTitle").focus();
+				return;
+			}
+			if($("#summernote").val() == '') {
+				alert('내용을 입력해주세요.')
+				$("#summernote").focus();
+				return;
+			}
+			
+			//form 보내기
+			let content = $("#summernote").val().replace(/<\/?[^>]+(>|$)/g, "");
+			let introTitle = $("#introTitle").val();
+			let reaIntroBoard = {};
+			reaIntroBoard.introTitle = introTitle;
+			reaIntroBoard.introContent = content;
+			console.log(reaIntroBoard);
+			$.ajax({
+				url : '/rea/introPageWrite',
+				data : reaIntroBoard,
+				type : 'get',
+				success : function(data) {
+					console.log(data);
+				}
+			});
+			
+		})
 		
 		
 		
