--- a/CustomizedHouse/bin/main/templates/fragments/header.html
+++ b/CustomizedHouse/bin/main/templates/fragments/header.html
@@ -15,7 +15,6 @@
         <link rel="stylesheet" th:href="@{/css/responsive.css}" type="text/css"/>
         <link rel="stylesheet" th:href="@{/css/bootsnav.css}" type="text/css"/>
 
-
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
@@ -34,7 +33,7 @@
                 <li class="join"><a sec:authorize="hasRole('ROLE_REAUSER')" th:href="@{/rea/reaMain}">공인중개사 회원</a></li>
                 <li class="join"><a sec:authorize="hasRole('ROLE_GENUSER')" th:href="@{/generic/myPage}">내정보</a></li>
                 <li class="side-menu">
-                    <a sec:authorize="hasRole('ROLE_ADMIN')"><i class='fa fa-bars'></i></a>
+                    <a sec:authorize="hasRole('ROLE_GENUSER')"><i class='fa fa-bars'></i></a>
                 </li>
             </ul>
         </div>
