--- a/CustomizedHouse/src/main/resources/templates/rea/reaIntroPage.html
+++ b/CustomizedHouse/src/main/resources/templates/rea/reaIntroPage.html
@@ -92,7 +92,7 @@
 			$.ajax({
 				url : '/rea/introPageWrite',
 				data : reaIntroBoard,
-				type : 'get',
+				type : 'post',
 				success : function(data) {
 					console.log(data);
 				}
