--- a/CustomizedHouse/src/main/resources/templates/fragments/header.html
+++ b/CustomizedHouse/src/main/resources/templates/fragments/header.html
@@ -31,13 +31,12 @@
                 </li>
                 <li class="join"><a sec:authorize="isAnonymous()" th:href="@{/sign/signUpPage}">회원가입</a></li>
                 <li class="join"><a sec:authorize="hasRole('ROLE_REAUSER')" th:href="@{/rea/reaMain}">공인중개사 회원</a></li>
-                <li class="join"><a sec:authorize="hasRole('ROLE_GENUSER')" th:href="@{/generic/myPage}">내정보</a></li>
+                <li class="join"><a sec:authorize="hasRole('ROLE_GENUSER')" th:href="@{/generic/genMainPage}">내정보</a></li>
                 <li class="side-menu">
                     <a sec:authorize="hasRole('ROLE_GENUSER')"><i class='fa fa-bars'></i></a>
                 </li>
             </ul>
         </div>
-
         <div class="navbar-header">
             <button type="button" class="navbar-toggler" data-toggle="collapse"
                     data-target="#navbar-menu"></button>
