[#9] 일반 회원 메인 view 페이지 수정

--- a/CustomizedHouse/bin/main/templates/fragments/header.html
+++ b/CustomizedHouse/bin/main/templates/fragments/header.html
@@ -33,7 +33,7 @@
                 <li class="join"><a sec:authorize="hasRole('ROLE_REAUSER')" th:href="@{/rea/reaMain}">공인중개사 회원</a></li>
                 <li class="join"><a sec:authorize="hasRole('ROLE_GENUSER')" th:href="@{/generic/genMainPage}">내정보</a></li>
                 <li class="side-menu">
-                    <a sec:authorize="hasRole('ROLE_GENUSER')"><i class='fa fa-bars'></i></a>
+                    <a sec:authorize="hasRole('ROLE_ADMIN')"><i class='fa fa-bars'></i></a>
                 </li>
             </ul>
         </div>
