--- a/CustomizedHouse/src/main/resources/templates/generic/main.html
+++ b/CustomizedHouse/src/main/resources/templates/generic/main.html
@@ -170,7 +170,7 @@ function deleteBk(){
 }
 
 </script>
-<section id="id" class="about roomy-100" th:fragment="content">
+<section id="id" class="about roomy-100" layout:fragment="content">
 	<div class="container-fluid">
 		<div class="about_content">
 		<br>
