[#9] 정보수정 view 컨트롤러 태움

--- a/CustomizedHouse/src/main/resources/templates/generic/main.html
+++ b/CustomizedHouse/src/main/resources/templates/generic/main.html
@@ -165,10 +165,7 @@ function deleteBk(){
       }
    
     });
-   
-   
 }
-
 </script>
 <section id="id" class="about roomy-100" layout:fragment="content">
 	<div class="container-fluid">
@@ -188,7 +185,7 @@ function deleteBk(){
 					            <div class="list-group">
 					               <a class="list-group-item"></a>
 					               <a href="#" class="list-group-item">북마크</a>
-					               <a href="GetGenericUserEditService.d4b?genericUserId=<%=genericUserId%>" class="list-group-item">정보수정</a>
+					               <a href="/generic/myPage" class="list-group-item">정보수정</a>
 					            </div>
 					         </div>
 					         <div class="col-lg-1"></div>
