--- a/CustomizedHouse/src/main/resources/templates/sale/saleListPage.html
+++ b/CustomizedHouse/src/main/resources/templates/sale/saleListPage.html
@@ -66,7 +66,7 @@
                         <div class="teamskillbar-bar"></div>
                     </div>
                     <input type="hidden" name="addr" value=" #">
-                    
+                    <a class='btn trigger' onclick="location.href='/sale/saleDetailPage'">See the Details</a>
                     <!-- End Skill Bar -->
                 </div>
                 
