--- a/CustomizedHouse/src/main/resources/templates/fragments/header.html
+++ b/CustomizedHouse/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" th:href="@{/css/slick-theme.css}" type="text/css"/>
         <link rel="stylesheet" th:href="@{/css/animate.css}" type="text/css"/>
         <link rel="stylesheet" th:href="@{/css/fonticons.css}" type="text/css"/>
-        <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css"/>
+		<link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css"/>
         <link rel="stylesheet" th:href="@{/css/bootstrap.css}" type="text/css"/>
         <link rel="stylesheet" th:href="@{/css/magnific-popup.css}" type="text/css"/>
         <link rel="stylesheet" th:href="@{/css/bootsnav.css}" type="text/css"/>
@@ -18,8 +18,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
-        <link rel="stylesheet" th:src="@{//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css}" type="text/css"/>
-        <link rel="stylesheet" th:src="@{//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css}" type="text/css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
+        <link rel="stylesheet" th:src="@{//codes.jquery.com/ui/1.12.1/themes/base/jquery-ui.css}" type="text/css"/>
 
     </head>
     <div class="container" th:fragment="indexNav">
@@ -32,7 +32,7 @@
                 <li class="join"><a sec:authorize="isAnonymous()" th:href="@{/sign/signUpPage}">회원가입</a></li>
                 <li class="join"><a sec:authorize="hasRole('ROLE_REAUSER')" th:href="@{/rea/reaMain}">소개 페이지</a></li>
                 <li class="join"><a sec:authorize="hasRole('ROLE_REAUSER')" th:href="@{/rea/reaSale}">매물 페이지</a></li>
-                <li class="join"><a sec:authorize="hasRole('ROLE_GENUSER')" th:href="@{/generic/genMainPage}">내정보</a></li>
+                <li class="join"><a sec:authorize="hasRole('ROLE_GENUSER')" th:href="@{/generic/genericMyPage}">마이페이지</a></li>
                 <li class="side-menu">
                     <a sec:authorize="hasRole('ROLE_ADMIN')"><i class='fa fa-bars'></i></a>
                 </li>
